补充bulkload方法